# Projet_P3_2025

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  SESSION_2025-12-16.md  SETUP.md  START.md  TODO.md  docker-compose.yml
backend/: .env.example  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_MIGRATION.md  MIGRATION.md  PIPELINE_ARCHITECTURE.md  README.md  create_notebooks.py  pyproject.toml  requirements_pipeline.txt
backend/config/: code_graph_schema.yaml
backend/data/: code_graph.json  test_data.csv
backend/data/kg_uploads/: test_contacts.csv
backend/data/temp/: input_079c2bbb.webm  input_3257d4eb.webm  input_71e21821.webm  input_b0a43751.webm  input_b1714f02.webm  input_b593e1bc.webm
backend/data/test_datasets/: movies_sample.csv
backend/notebooks/: 01_test_stt_groq.ipynb  02_test_tts_edge.ipynb  03_test_agent_openrouter.ipynb  04_test_neo4j_graphiti.ipynb  05_pipeline_complet.ipynb  06_kg_pipeline_test.ipynb  README.md
backend/src/: app.py  main.py
backend/src/agents/: jarvis_agent.py
backend/src/agents/jarvis/: __init__.py  graph.py  state.py
backend/src/agents/jarvis/nodes/: __init__.py  context_building.py  llm_call.py  memory_persist.py  ner_extraction.py  ranking.py  semantic_retrieval.py
backend/src/agents/langgraph/: __init__.py  jarvis_graph.py
backend/src/api/: main.py
backend/src/api/routes/: __init__.py  conversations.py  health.py  kg.py  knowledge.py  langgraph.py  voice.py
backend/src/code_analysis/: __init__.py  entity_extractor.py  graphiti_integrator.py  python_parser.py  test_analyzer.py
backend/src/controllers/: __init__.py  health_controller.py  knowledge_controller.py  voice_controller.py
backend/src/core/: config.py  database.py  logging.py
backend/src/graph/: graphiti_client.py  test_connection.py
backend/src/kg/: pipeline_example.py
backend/src/kg/agents/: entity_extractor_agent.py  relation_extractor_agent.py
backend/src/kg/models/: document.py  entity.py  relation.py
backend/src/kg/parsers/: csv_parser.py  json_parser.py  pdf_parser.py  txt_parser.py
backend/src/kg/pipeline/: __init__.py  base.py  factory.py  pipeline.py
backend/src/kg/services/: neo4j_service.py  pipeline_orchestrator.py
backend/src/middlewares/: __init__.py  cors.py  error_handler.py
backend/src/models/: code_entities.py  db_models.py  requests.py  responses.py
backend/src/repositories/: __init__.py  conversation_repository.py
backend/src/schemas/: health.py  knowledge.py  voice.py
backend/src/services/: agent_service.py  conversation_service.py  graph_service.py  knowledge_service.py  langgraph_service.py  voice_service.py
backend/src/services/voice/: __init__.py  stt_service.py  tts_service.py
backend/src/voice/: stt.py  tts.py
backend/tests/: conftest.py
backend/tests/kg/: test_pipeline_e2e.py
backend/tests/services/: test_voice_service.py
(+70 files in other folders)
